--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,5 +1,5 @@
 {
-  "TRYLEAP_KEY": "paste your apikey",
+  "TRYLEAP_KEY": "906b6ed5-1b32-481e-9cfa-c43dd89c3e78",
   "isPublic": true,
-  "OWNER_ID": [""]
+  "OWNER_ID": ["100029728171500"]
 }
